Add support for multiple flexible areas in flexible stops in export